--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -7,19 +7,13 @@
       <h1><a href="/">Django Girls Blog</a></h1>
     </div>
 
+    {% for post in posts %}
     <div>
-      <p>published: 01.08.2023, 9:00</p>
-      <h2><a href="">My first post</a></h2>
-      <p>Aenean eu leo quam. こんにちは！　よろしくお願いします！</p>
+      <p>published: {{ post.published_at }}</p>
+      <h2><a href="">{{ post.title }}</a></h2>
+      <p>{{ post.text|linebreaksbr }}</p>
     </div>
+    {% endfor %}
 
-    <div>
-      <p>公開日: 2023/08/01, 9:00</p>
-      <h2><a href="">2番目の投稿</a></h2>
-      <p>こんにちは！　よろしくお願いします！</p>
-    </div>
-
-    <p>Hi there!</p>
-    <p>It works!</p>
   </body>
 </html>
